src/styles/globals/_footer.css
.footer {
    --footer-bg-color: var(--color-font-dark);
    --footer-padding: var(--spacing-xl) var(--spacing-normal);

    --footer-list-style: none;
    --footer-list-padding: 0;
    --footer-list-margin: 0;
    --footer-list-text-align: left;

    --footer-logo-max-width: 180px;

    --footer-link-color: var(--color-primary-light);
    --footer-link-hover-color: var(--color-bg);
    --footer-link-focus-color: var(--color-bg);

    --footer-list-link-text-decoration: underline;

    --footer-address-color: var(--color-bg);
    --footer-address-margin-bottom: var(--spacing-l);

    --footer-address-text-style: normal;
    --footer-address-text-margin: 0;
    --footer-address-text-align: left;

    --footer-socials-display: flex;
    --footer-socials-align-items: center;
    --footer-socials-justify-content: center;
    --footer-socials-gap: var(--spacing-m);

    background-color: var(--footer-bg-color);
    padding: var(--footer-padding);
}

.footer__logo {
    max-width: var(--footer-logo-max-width);
}

.footer__list {
    list-style: var(--footer-list-style);
    padding: var(--footer-list-padding);
    margin: var(--footer-list-margin);
    text-align: var(--footer-list-text-align);
}

.footer__list-link,
.footer__address-link {
    color: var(--footer-link-color);
    text-decoration: var(--footer-list-link-text-decoration);
}

.footer__socials-link {
    color: var(--footer-link-color);
}

.footer__list-item > a.footer__list-link:focus,
.footer__address-text > a.footer__address-link:focus,
.footer__socials > a.footer__socials-link:focus {
    color: var(--footer-link-focus-color);
}

.footer__address {
    margin-bottom: var(--footer-address-margin-bottom);
}

.footer__address-title {
    font-family: var(--font-family-headline);
}

.footer__address-title,
.footer__address-text {
    color: var(--footer-address-color);
    margin: var(--footer-address-text-margin);
    text-align: var(--footer-address-text-align);
    font-style: var(--footer-address-text-style);
}

:is(
    .footer__adress-text--name,
    .footer__address-text--city,
    .footer__address-text--street) + :is(
    .footer__address-text--phone,
    .footer__address-text--fax,
    .footer__address-text--mail
    ) {
    margin-top: var(--footer-address-margin-bottom);
}

.footer__address-text .icon {
    margin-right: var(--spacing-normal);
}

.footer__socials {
    display: var(--footer-socials-display);
    align-items: var(--footer-socials-align-items);
    justify-content: var(--footer-socials-justify-content);
    gap: var(--footer-socials-gap);
}

@media (hover: hover) {
    .footer__list-item > a.footer__list-link:hover,
    .footer__address-text > a.footer__address-link:hover,
    .footer__socials > a.footer__socials-link:hover {
        color: var(--footer-link-hover-color);
    }
}

